relative path adjusted

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oluwaloseyitowi Iji - Software Engineer</title>
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <!-- allow for email sending through the contact me section -->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
@@ -43,11 +43,7 @@
       <!-- introductory section -->
       <section id="home" class="hero">
         <div class="profile-image-container">
-          <img
-            src="/assets/profilepicture.png"
-            alt="Oluwaloseyitowi Iji"
-            class="profile-image"
-          />
+          <img src="assets/profilepicture.png" />
         </div>
         <!-- personal information -->
         <h1>Oluwaloseyitowi Iji</h1>
@@ -59,12 +55,7 @@
         </div>
         <!-- resume download button -->
         <div class="download-resume">
-          <a
-            href="/assets/Oluwaloseytowi Resume.pdf"
-            download
-            class="download-btn"
-            >Download Resume (PDF)</a
-          >
+          <a href="assets/Oluwaloseytowi Resume.pdf" download>Download</a>
         </div>
       </section>
       <!-- section preview shortcut for aesthetics -->
@@ -190,6 +181,6 @@
     </main>
     <!-- scroll to the top of webpage button -->
     <button class="scroll-top" id="scrollTopBtn">↑</button>
-    <script src="/assets/script.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
