image and resume link fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
       (function () {
-        emailjs.init("YOUR_PUBLIC_KEY"); // replace with your public key
+        emailjs.init("OhTXq477fKGRooPiH");
       })();
     </script>
   </head>
@@ -43,7 +43,11 @@
       <!-- introductory section -->
       <section id="home" class="hero">
         <div class="profile-image-container">
-          <img src="assets/profilepicture.png" />
+          <img
+            src="assets/profilepicture.png"
+            alt="Oluwaloseyitowi Iji"
+            class="profile-image"
+          />
         </div>
         <!-- personal information -->
         <h1>Oluwaloseyitowi Iji</h1>
@@ -55,7 +59,9 @@
         </div>
         <!-- resume download button -->
         <div class="download-resume">
-          <a href="assets/Oluwaloseytowi Resume.pdf" download>Download</a>
+          <a href="assets/Oluwaloseytowi Resume.pdf" download
+            >Download Resume</a
+          >
         </div>
       </section>
       <!-- section preview shortcut for aesthetics -->
